<resources>
    <string name="app_name">Chai</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="back">이전</string>

    <!-- home !-->
    <string name="home">홈</string>
    <string name="home_setting_title">타이틀 설정</string>
    <string name="home_detail">자세히</string>
    <string name="home_no_badge">타이틀을 설정해 보세요</string>
    <string name="home_my_rank_in_school">%s에서 나의 랭크</string>
    <string name="home_my_school_rank_in_region">%s에서 우리 학교 랭크</string>

    <!-- rank !-->
    <string name="rank">랭킹</string>
    <string name="rank_individual">개인랭킹</string>
    <string name="rank_school">학교랭킹</string>
    <string name="rank_champion">챔피언 랭킹 보기</string>
    <string name="rank_in_school">학교 정보</string>

    <string name="champion">챔피언</string>
    <string name="data_choice">데이터 선택</string>
    <string name="rank_champion_choice_des">2단계 필터 설정을 통해\n더 재미있는 랭킹을 확인 해보세요.</string>
    <string name="rank_champion_choice_step1_des">챔피언을 1개 선택해주세요.</string>
    <string name="rank_champion_choice_step2_des">궁금한 데이터를 1개 선택해주세요.</string>
    <string name="rank_champion_choice_submit">챔피언 선택완료</string>
    <string name="rank_champion_choice_data_submit">데이터 선택완료</string>

    <string name="rank_my_rank_in_school">%s에서 나의 랭크</string>
    <string name="rank_my_school_rank_in_region">%s에서 우리 학교 랭크</string>

    <!-- auth -->
    <string name="server_client_id">742823777512-r3petmmlnt08radg6uu8hhecubnutpov.apps.googleusercontent.com</string>
    <string name="login_google_btn">구글계정으로 로그인</string>

    <!-- join -->
    <string name="join_terms">약관 동의</string>
    <string name="join_info">기본정보</string>
    <string name="join_finish">가입완료</string>
    <string name="join_google"><font color='#397EF6'>구글계정</font>으로 로그인하셨습니다.</string>
    <string name="join_term_check_all">전체 내용에 동의합니다.</string>
    <string name="email">이메일 주소</string>
    <string name="lol_nikcname">롤닉네임</string>
    <string name="belongs">소속</string>
    <string name="search_school_hint">학교이름을 검색해 주세요</string>
    <string name="search_none">검색결과가 없습니다.</string>

    <string-array name="belong_list">
        <item>고등학교</item>
        <item>중학교</item>
        <item>초등학교</item>
    </string-array>

    <!-- battle -->
    <string name="battle">배틀</string>
    <string name="battle_search">배틀할 상대를 검색해주세요.</string>
    <string name="battle_recent">최근 대결상대</string>
    <string name="battle_recent_result">최근 전적</string>
    <string name="battle_recent_win">승리 <font color='#F1114B'>W</font></string>
    <string name="battle_recent_lost">패배 <font color='#000000'>L</font></string>
    <string name="battle_total">통합 배틀</string>
    <string name="battle_character">캐릭터 배틀</string>
    <string name="battle_search_none">검색결과가 없습니다.\n친구를 차이에 초대해 주세요!</string>
    <string name="battle_search_share">차이 공유하기</string>
    <string name="battle_with_other">다른상대와 배틀</string>
    <string name="battle_for_real">실전배틀 신청하기</string>
    <string name="battle_invitation_apply">게임 신청하기</string>
    <string name="battle_invitation">초대장</string>
    <string name="battle_invitation_sub">친구에게 실전 배틀 &amp;듀오를 신청해 보세요</string>
    <string name="battle_invitation_user">받는 사람</string>
    <string name="battle_invitation_type">배틀 형태</string>
    <string name="battle_invitation_type_1">1:1</string>
    <string name="battle_invitation_type_2">듀오</string>
    <string name="battle_character_contents_title">비교를 원하는 챔피언</string>
    <string name="battle_character_contents_subtitle">챔피언을 1개 선택해주세요.</string>
    <string name="battle_character_select_finish">캐릭터 선택 완료</string>

    <!-- setting -->
    <string name="setting">설정</string>
    <string name="login_info">로그인 정보</string>
    <string name="manage_title">타이틀 관리</string>
    <string name="logout">로그아웃</string>
    <string name="leave">탈퇴</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="logout_title">로그아웃</string>
    <string name="logout_contents">차이를 로그아웃 하시겠습니까?</string>
    <string name="leave_title">회원탈퇴</string>
    <string name="leave_contents">차이를 탈퇴 하시겠습니까?</string>
    <string name="title_change">변경할 타이틀을 선택해 주세요.</string>
    <string name="title_change_sub">챔피언을 1개 선택해주세요.</string>
    <string name="title_change_complete">타이틀 변경 완료</string>
    <string name="title_recent_month">최근 1달</string>
    <string name="title_history">타이틀 히스토리</string>
    <string name="title_get"><font color='#397EF6'>→</font></string>
    <string name="title_lose"><font color='#F1114B'>←</font></string>

</resources>
