<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.battle.BattleInvitationFragment">
        <TextView
            android:id="@+id/invitation_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/battle_invitation"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_close"
            android:background="@color/fill_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rectangle"
            android:backgroundTint="@color/fill_blue"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="52dp"
            android:text="@string/battle_invitation_apply"
            android:textColor="@color/fill_background"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/guide_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/battle_invitation_sub"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/invitation_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/guide_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/battle_invitation_user"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/guide_1"
            app:layout_constraintStart_toStartOf="parent" />

        <include android:id="@+id/invitation_member"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            layout="@layout/item_battle"
            app:layout_constraintStart_toStartOf="@id/invitation_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_2"/>

        <TextView
            android:id="@+id/guide_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/battle_invitation_type"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/invitation_member"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/invitation_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/guide_3"
            app:layout_constraintTop_toBottomOf="@id/guide_3">

            <RadioButton
                android:layout_width="80dp"
                android:layout_height="44dp"
                android:layout_marginEnd="8dp"
                android:button="@android:color/transparent"
                android:text="@string/battle_invitation_type_1"
                android:textAlignment="center"
                android:background="@drawable/ic_radio_selector"/>

            <RadioButton
                android:layout_width="80dp"
                android:layout_height="44dp"
                android:button="@android:color/transparent"
                android:text="@string/battle_invitation_type_2"
                android:checked="true"
                android:textAlignment="center"
                android:background="@drawable/ic_radio_selector"/>

        </RadioGroup>

        <EditText
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="@drawable/round_rectangle"
            android:backgroundTint="@color/fill_contents"
            android:layout_marginTop="24dp"
            android:hint="메세지를 입력해 주세요."
            android:textSize="14sp"
            android:gravity="left"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@id/invitation_member"
            app:layout_constraintTop_toBottomOf="@id/invitation_type"
            app:layout_constraintEnd_toEndOf="@id/invitation_member"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
