<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmdoel"
            type="com.opgg.chai.ui.main.setting.SettingViewModel" />
        <variable
            name="view"
            type="com.opgg.chai.ui.main.setting.SettingFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E5E5E5"
        tools:context=".ui.main.home.SettingFragment">

        <TextView
            android:id="@+id/guide_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/login_info"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_google"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_1" />

        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/email"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:layout_marginTop="71dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_1" />

        <EditText
            android:id="@+id/email_edt"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:enabled="false"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:text="@{viewmdoel.userEmail}"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/fill_background"
            app:layout_constraintStart_toStartOf="@id/label_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_email"
            tools:text="hele98@gmail.com" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_google"
            android:textColor="@color/text_secondary"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/email_edt"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/setting_title_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="46dp"
            android:text="@string/manage_title"
            android:textColor="@color/fill_blue"
            android:textSize="16sp"
            android:stateListAnimator="@null"
            android:onClick="@{view::moveTitle}"
            android:background="@drawable/round_rectangle_stroke_black"
            app:layout_constraintTop_toBottomOf="@id/email_edt" />

        <Button
            android:id="@+id/setting_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rectangle_stroke_black"
            android:text="@string/logout"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:onClick="@{view::confirmLogout}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setting_title_btn"
            app:layout_constraintEnd_toStartOf="@id/setting_leave" />

        <Button
            android:id="@+id/setting_leave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rectangle_stroke_black"
            android:text="@string/leave"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:onClick="@{view::confirmLeave}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/setting_logout"
            app:layout_constraintTop_toBottomOf="@id/setting_title_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>