<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E5E5E5"
        tools:context=".ui.main.battle.BattleCharacterFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:lines="1"
            android:background="@color/fill_background"
            android:text="@string/battle_character"
            android:textAlignment="center"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/move_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_back_24"
            android:background="@android:color/transparent"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/title"/>

        <TextView
            android:id="@+id/contents_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/battle_character_contents_title"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/move_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/battle_character_contents_subtitle"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/contents_title"
            app:layout_constraintTop_toBottomOf="@id/contents_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/character_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="67dp"
            android:paddingTop="24dp"
            android:paddingBottom="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contents_title"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:listitem="@layout/item_character"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/round_rectangle"
            android:backgroundTint="@color/fill_default"
            android:text="@string/battle_character_select_finish"
            android:textSize="16sp"
            android:textColor="@color/fill_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/character_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
