<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="fragment"
            type="com.opgg.chai.ui.main.rank.champion.RankChampionChoiceFragment" />
        <variable
            name="vm"
            type="com.opgg.chai.ui.main.rank.champion.RankChampionChoiceViewModel" />
        <variable
            name="adapter"
            type="com.opgg.chai.ui.main.rank.adapters.RankChampionAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/rank"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textFontWeight="700"
            android:textColor="@color/text_primary"
            android:id="@+id/rank_champion_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:src="@drawable/ic_close"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/rank_champion_title"
            app:layout_constraintBottom_toBottomOf="@id/rank_champion_title"
            android:id="@+id/rank_champion_choice_close"
            android:onClick="@{(view) -> fragment.onClose(view)}"
            android:layout_width="23.5dp"
            android:layout_height="23.5dp"/>


        <TextView
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/rank_champion_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/rank_champion_des"
            android:textSize="14sp"
            android:textFontWeight="400"
            android:textColor="@color/text_primary"
            android:text="@string/rank_champion_choice_des"
            android:layout_width="0dp"
            android:layout_height="48dp"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:progress="50"
            android:id="@+id/rank_champion_choice_progress"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/rank_champion_des"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>



        <ViewFlipper
            android:id="@+id/rank_champion_step_flipper"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rank_champion_choice_progress"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/champion"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/rank_champion_step_1_title"
                    android:layout_width="0dp"
                    android:textSize="18sp"
                    android:textColor="@color/text_primary"
                    android:textFontWeight="400"
                    android:layout_height="32dp"/>

                <TextView
                    android:text="@string/rank_champion_choice_step1_des"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rank_champion_step_1_title"
                    android:id="@+id/rank_champion_step_1_sub_des"
                    android:textSize="14sp"
                    android:textColor="@color/text_primary"
                    android:textFontWeight="400"
                    android:layout_width="0dp"
                    android:layout_height="24dp"/>

                <ImageView
                    android:id="@+id/rank_champion_step_1_divider"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rank_champion_step_1_sub_des"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/line_dotted_horizontal"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="24dp"
                    tools:listitem="@layout/item_rank_champion"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    tools:itemCount="50"
                    app:adapter="@{adapter}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rank_champion_step_1_divider"
                    app:layout_constraintBottom_toBottomOf="@id/rank_champion_step_1_submit"
                    app:items="@{vm.champions}"
                    android:id="@+id/rank_champion_list"
                    android:layout_width="0dp"
                    android:layout_height="0dp"/>


                <Button
                    android:enabled="false"
                    android:text="@string/rank_champion_choice_submit"
                    android:textSize="16sp"
                    android:textFontWeight="400"
                    android:onClick="@{(view) -> fragment.onChampionSubmit(view)}"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_champion_choice_submit"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="28dp"
                    android:id="@+id/rank_champion_step_1_submit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/data_choice"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/rank_champion_step_2_sub_title"
                    android:layout_width="0dp"
                    android:textSize="18sp"
                    android:textColor="@color/text_primary"
                    android:textFontWeight="400"
                    android:layout_height="32dp"/>

                <TextView
                    android:text="@string/rank_champion_choice_step2_des"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rank_champion_step_2_sub_title"
                    android:id="@+id/rank_champion_step_2_sub_des"
                    android:textSize="14sp"
                    android:textColor="@color/text_primary"
                    android:textFontWeight="400"
                    android:layout_width="0dp"
                    android:layout_height="24dp"/>

                <ImageView
                    android:id="@+id/rank_champion_step_2_divider"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rank_champion_step_2_sub_des"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/line_dotted_horizontal"/>


                <ScrollView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rank_champion_step_2_divider"
                    app:layout_constraintBottom_toBottomOf="@id/rank_champion_step_2_data_submit"
                    android:orientation="vertical"
                    android:scrollbars="none"
                    android:layout_width="0dp"
                    android:layout_height="0dp">

                    <com.opgg.chai.ui.main.rank.champion.RankChampionCompareCategoryView
                        android:id="@+id/rank_champion_category_choice_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:flChildSpacing="8dp"
                        app:flRowSpacing="8dp"/>

                </ScrollView>

                <Button
                    android:id="@+id/rank_champion_choice_step_2_back"
                    android:background="@drawable/bg_champion_choice_back"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="28dp"
                    android:text="@string/back"
                    android:onClick="@{(view) -> fragment.onBack(view)}"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textFontWeight="400"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"/>

                <Button
                    android:enabled="false"
                    android:text="@string/rank_champion_choice_data_submit"
                    android:textSize="16sp"
                    android:textFontWeight="400"
                    android:textColor="@color/white"
                    android:onClick="@{(view) -> fragment.onDataSubmit(view)}"
                    android:background="@drawable/bg_champion_choice_submit"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toRightOf="@id/rank_champion_choice_step_2_back"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="28dp"
                    android:id="@+id/rank_champion_step_2_data_submit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ViewFlipper>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>