<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="fragment"
            type="com.opgg.chai.ui.main.rank.RankFragment" />
        <variable
            name="vm"
            type="com.opgg.chai.ui.main.rank.RankViewModel" />
        <variable
            name="adapter"
            type="com.opgg.chai.ui.main.rank.adapters.RankAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.rank.RankFragment">

        <RadioGroup
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_tab_layout"
            android:id="@+id/rank_tab_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="28dp">

            <RadioButton
                tools:checked="true"
                android:gravity="center"
                android:text="@string/rank_individual"
                android:layout_margin="2dp"
                android:background="@drawable/selector_rank_tab_item"
                android:textColor="@color/selector_rank_tab_item"
                android:button="@null"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:gravity="center"
                android:text="@string/rank_school"
                android:layout_margin="2dp"
                android:background="@drawable/selector_rank_tab_item"
                android:textColor="@color/selector_rank_tab_item"
                android:button="@null"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <TextView
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/rank_champion"
            android:background="@drawable/bg_champion_rank"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/blue"
            android:id="@+id/champion_rank"
            app:layout_constraintTop_toBottomOf="@id/rank_tab_layout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="0dp"
            android:layout_height="48dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rank_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            tools:listitem="@layout/item_rank"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:adapter="@{adapter}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/champion_rank"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
